feat: allow transform tree node into int collection